--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         </div>
                     </div>
 
-                    <div class="pricing_boxes">
+<!--                     <div class="pricing_boxes">
                         <div class="pricing_box">
                             <h5>Free</h5>
                             <p>$0/month</p>
@@ -318,7 +318,7 @@
                             </ul>
                             <button class="pricing_btn">Get started</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
