--- a/index.html
+++ b/index.html
@@ -272,57 +272,94 @@
     <!-- client section ends -->
 
     <!-- pricing section starts -->
-        <section class="pricing_sec">
-            <div class="container">
-                <div class="pricing_main_sec">
-                    <div class="pricing_heading">
-                        <h2>Pricing</h2>
-                        <p>Choose the right plan to meet your SEO<br> needs and start optimizing today.</p>
+    <section class="pricing_sec">
+        <div class="container">
+            <div class="pricing_main_sec">
+                <div class="pricing_heading">
+                    <h2>Pricing</h2>
+                    <p>Choose the right plan to meet your SEO<br> needs and start optimizing today.</p>
 
-                        <div class="main_toggle">
-                            <span class="toggle"><img src="assets/images/toggle-button-icon.png" alt="toggle"></span>
-                            <span class="toogle_content">&nbsp;dsad</span>
+                    <div class="main_toggle">
+                        <span class="toggle"><img src="assets/images/toggle-button-icon.png" alt="toggle"></span>
+                        <span class="toogle_content">&nbsp;dsad</span>
+                    </div>
+                </div>
+
+                <div class="pricing_boxes">
+                    <div class="pricing_box">
+                        <h5>Pricing</h5>
+                        <p>$29/month</p>
+                        <div class="line"></div>
+                        <ul>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Keyword
+                                    optimization</span></li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Automated meta
+                                    tags</span></li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>SEO monitoring</span>
+                            </li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Monthly reports</span>
+                            </li>
+                        </ul>
+                        <div class="btn">
+                            <button class="pricing_btn">Join Waitlist</button>
                         </div>
                     </div>
 
-<!--                     <div class="pricing_boxes">
-                        <div class="pricing_box">
-                            <h5>Free</h5>
-                            <p>$0/month</p>
-                            <ul>
-                                <li>1 user</li>
-                                <li>Basic features</li>
-                                <li>Email support</li>
-                            </ul>
-                            <button class="pricing_btn">Get started</button>
+                    <div class="pricing_box pro_box">
+                        <h5>Pro</h5>
+                        <p>$79/month</p>
+                        <div class="line"></div>
+                        <ul>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Keyword
+                                    optimization</span></li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Automated meta
+                                    tags</span></li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>SEO monitoring</span>
+                            </li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Monthly reports</span>
+                            </li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Content
+                                    suggestions</span></li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Link optimization</span>
+                            </li>
+                        </ul>
+                        <div class="btn">
+                            <button class="pricing_btn custom_btn">Join Waitlist</button>
                         </div>
+                    </div>
 
-                        <div class="pricing_box">
-                            <h5>Pro</h5>
-                            <p>$29/month</p>
-                            <ul>
-                                <li>Up to 5 users</li>
-                                <li>Advanced features</li>
-                                <li>Priority support</li>
-                            </ul>
-                            <button class="pricing_btn">Get started</button>
+                    <div class="pricing_box">
+                        <h5>Business</h5>
+                        <p>$99/month</p>
+                        <div class="line"></div>
+                        <ul>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Keyword
+                                    optimization</span></li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Automated meta
+                                    tags</span></li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>SEO monitoring</span>
+                            </li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Monthly reports</span>
+                            </li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Content
+                                    suggestions</span></li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Link optimization</span>
+                            </li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>Multi-user access</span>
+                            </li>
+                            <li><img src="assets/images/right-Icon.png" alt="icon"> &nbsp;<span>API integration</span>
+                            </li>
+                        </ul>
+                        <div class="btn">
+                            <button class="pricing_btn custom_btn2">Join Waitlist</button>
                         </div>
-
-                        <div class="pricing_box">
-                            <h5>Enterprise</h5>
-                            <p>$99/month</p>
-                            <ul>
-                                <li>Unlimited users</li>
-                                <li>All features</li>
-                                <li>Dedicated support</li>
-                            </ul>
-                            <button class="pricing_btn">Get started</button>
-                        </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
     <!-- pricing section ends -->
+    
 </body>
 
 </html>
